# cpp_variant_experiments

./: CMakeLists.txt  README.md  reduce_rose_tree.cpp  reduce_rose_tree2.cpp  reduce_typed_tree.cpp  rose_tree.cpp  shared_ptr_rose_tree.cpp  shared_ptr_variant_rose_tree.cpp  simplified_rose_tree.cpp  simplified_variant_tree.cpp
